# Binary-Eye

./: .gitignore  readme.md
client/: package-lock.json  package.json
client/src/: App.jsx  index.css
engine/: CMakeLists.txt
engine/src/: Analyzer.cpp  Analyzer.h  main.cpp
server/: index.js  package-lock.json  package.json
